src/test/resources/fails/exc3.s
// No end to main function
compile nios-ii de0
main:
    r0 = r1;